# cap-conformance

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARK_POLICY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmarks/: RESULTS.md  bench_heartbeat_latency.py  bench_scalability.py
cap_bench/: __init__.py  machine_type_proto.py  runner.py  schema.py  taxonomy.py
cap_bench/backends/: __init__.py
scenarios/: scn_excavate_basic_01.yaml  scn_excavate_haul_chain_01.yaml  scn_excavate_underyield_01.yaml  scn_haul_basic_01.yaml  scn_terrain_too_steep_01.yaml  scn_truck_wrong_position_01.yaml
tests/: __init__.py  conftest.py  test_alo_conformance_extended.py  test_alo_lifecycle.py  test_concurrent_work_orders.py  test_dialogue.py  test_dialogue_edge_cases.py  test_entity_descriptor_extended.py  test_entity_descriptor_lifecycle.py  test_error_handling.py  test_external_target.py  test_handover.py  test_handshake.py  test_heartbeat.py  test_interop_ts.py  test_mode_command.py  test_mqtt_transport.py  test_property_based.py  test_reconnection.py  test_reservation.py  test_reservation_behavioral.py  test_security.py  test_skill_invocation.py  test_timeout_cascade.py  test_work_order_lifecycle.py  transport_runner.py
